@@ -1,4 +1,4 @@
-.\" $NetBSD: ums.4,v 1.8 2008/04/30 13:10:54 martin Exp $
+.\" $NetBSD: ums.4,v 1.9 2009/11/27 08:35:05 mbalmer Exp $
 .\"
 .\" Copyright (c) 1999, 2001 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -27,20 +27,20 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd July 12, 1998
+.Dd November 27, 2009
 .Dt UMS 4
 .Os
 .Sh NAME
 .Nm ums
-.Nd USB mouse support
+.Nd USB mouse and touchpanel support
 .Sh SYNOPSIS
 .Cd "ums*     at uhidev? reportid ?"
 .Cd "wsmouse* at ums?"
 .Sh DESCRIPTION
 The
 .Nm
-driver provides support for USB mice.
-Access to the mouse is through the
+driver provides support for USB mice and touchpanels.
+Access to the movement data is through the
 .Xr wscons 4
 driver.
 .Sh SEE ALSO
@@ -53,3 +53,5 @@ The
 driver
 appeared in
 .Nx 1.4 .
+Touchpanel support was added in
+.Nx 5.1 .
